# Addes

./: .env.example  .gitignore  BACKEND_SPEC.md  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml
docs/: AGNO_DOCS.md
scripts/: get_test_token.py
sql/: schema.sql  storage_policies.sql
src/: .secdocs.md
src/backend/: __init__.py  auth.py  cli.py  config.py  database.py  main.py  models.py  schemas.py
src/backend/routers/: __init__.py  ads.py  ai.py  auth.py  scrape.py
src/backend/services/: __init__.py  gemini.py  groq.py  image_gen.py  scraper.py  storage.py
tests/: __init__.py  conftest.py  test_ads.py  test_ai.py
